<resources>
    <string name="bt_action_archive">Done</string>
    <string name="bt_action_cluster_settings">Settings</string>
    <string name="bt_action_compose">Compose menu</string>
    <string name="bt_action_delete">Delete</string>
    <string name="bt_action_delete_sweep">Delete unpinned</string>
    <string name="bt_action_move_to">Move to…</string>
    <string name="bt_action_pin">Pin</string>
    <string name="bt_action_snooze">Snooze</string>
    <string name="bt_action_sweep">Clear unpinned</string>
    <string name="bt_highlights_settings_category_title">Highlights</string>
    <string name="bt_highlights_settings_toggle_title">Show high priority emails first</string>
    <string name="bt_highlights_training_setting_title">Train Highlights</string>
    <string name="bt_notification_level_preference_title">Notification level</string>
    <string name="bt_preference_days_of_mail_to_sync_title">Days of mail to sync</string>
    <string name="bt_preferences_account_specific_screen_key">accountSpecificScreenKey</string>
    <string name="bt_preferences_ash_htt_settings_key">asvhHttSettingsKey</string>
    <string name="bt_preferences_ash_settings_category_key">asvhSettingsCategoryKey</string>
    <string name="bt_preferences_ash_settings_key">asvhSettingsKey</string>
    <string name="bt_preferences_assists_category_title">Assists</string>
    <string name="bt_preferences_assists_settings_category_key">atsSettingsCategoryKey</string>
    <string name="bt_preferences_bigtop_data_account_settings_category_key">bigTopDataAccountSettingsCategoryKey</string>
    <string name="bt_preferences_bigtop_data_account_settings_category_title">BigTop Data</string>
    <string name="bt_preferences_bigtop_data_clear_database_key">bigtopDataClearDatabaseKey</string>
    <string name="bt_preferences_bigtop_data_clear_database_title">Clear database</string>
    <string name="bt_preferences_clipboard_promotion_seen">SII OOBE seen</string>
    <string name="bt_preferences_clusters_section_title">Labels</string>
    <string name="bt_preferences_crash_reporting_key">crashReportingKey</string>
    <string name="bt_preferences_crash_reporting_summary">Report additional diagnostics to help improve Inbox</string>
    <string name="bt_preferences_crash_reporting_title">Improve Inbox</string>
    <string name="bt_preferences_days_of_mail_to_sync_key">daysOfMailToSyncKey</string>
    <string name="bt_preferences_debug_category_key">debugCategoryKey2</string>
    <string name="bt_preferences_debug_location_report_key">locationDebugReportKey</string>
    <string name="bt_preferences_debug_reset_clipboard_promotion_key">resetClipboard</string>
    <string name="bt_preferences_debug_section_title">Debug settings</string>
    <string name="bt_preferences_debug_settings_export_filesystem_logs_subtitle">Export stored log files to /sdcard/xlogger/.</string>
    <string name="bt_preferences_debug_settings_export_filesystem_logs_title">Export XLogger logs</string>
    <string name="bt_preferences_debug_settings_export_log_files_key">debugExportLogFilesKey</string>
    <string name="bt_preferences_debug_settings_key">debugSettingsKey</string>
    <string name="bt_preferences_debug_settings_log_to_filesystem_key">debugLogToFilesystemKey</string>
    <string name="bt_preferences_debug_settings_log_to_filesystem_subtitle">Store XLogger output to persistent log files.</string>
    <string name="bt_preferences_debug_settings_log_to_filesystem_title">Log to file system</string>
    <string name="bt_preferences_debug_settings_reset_disable_gmail_notifications_key">debugResetDisableNotificationsKey</string>
    <string name="bt_preferences_debug_settings_reset_disable_gmail_notifications_title">Reset Disable Gmail dialog timers</string>
    <string name="bt_preferences_debug_settings_title">Advanced / Debug (experts only)</string>
    <string name="bt_preferences_delete_search_history_key">deleteSearchHistoryKey</string>
    <string name="bt_preferences_delete_search_history_title">Clear search history</string>
    <string name="bt_preferences_developer_features_key">developerFeaturesKey2</string>
    <string name="bt_preferences_developer_features_title">Enable developer features</string>
    <string name="bt_preferences_enable_perfect_snippet">enable_perfect_snippet</string>
    <string name="bt_preferences_experiment_overrides_category_key">experimentOverridesSettingsCategoryKey</string>
    <string name="bt_preferences_experiment_overrides_category_title">Experiment Overrides</string>
    <string name="bt_preferences_experiment_overrides_key">experimentOverridesKey</string>
    <string name="bt_preferences_experiment_overrides_title">Inspect and override experiment values</string>
    <string name="bt_preferences_fishfood_features_key">fishfoodFeaturesKey2</string>
    <string name="bt_preferences_fishfood_features_title">Enable fishfood features</string>
    <string name="bt_preferences_frame_rate_metrics_key">frameJankKey</string>
    <string name="bt_preferences_frame_rate_metrics_title">Enable frame rate metrics</string>
    <string name="bt_preferences_general_category_key">generalSettings</string>
    <string name="bt_preferences_general_settings_title">General</string>
    <string name="bt_preferences_inbox_tips_category_title">Inbox Tips</string>
    <string name="bt_preferences_inbox_tips_key">inboxTipsKey</string>
    <string name="bt_preferences_incremental_channel_key">incrementalChannelKey2</string>
    <string name="bt_preferences_incremental_channel_title">Use incremental channel for next launch</string>
    <string name="bt_preferences_labels_notifications_settings_category_key">labelsSettingsCategoryKey</string>
    <string name="bt_preferences_labels_notifications_settings_key">labelNotificationSettingsKey</string>
    <string name="bt_preferences_labels_notifications_title">Label settings and notifications</string>
    <string name="bt_preferences_leak_canary_key">leakCanaryKey</string>
    <string name="bt_preferences_leak_canary_title">Enable Leak Canary upon next startup</string>
    <string name="bt_preferences_leak_detective_key">leakDetectiveKey</string>
    <string name="bt_preferences_leak_detective_title">Enable Leak Detective upon next startup</string>
    <string name="bt_preferences_live_method_profiling_title">Show profile capture button</string>
    <string name="bt_preferences_local_queries_only_key">localQueriesOnlyKey</string>
    <string name="bt_preferences_local_queries_only_title">Only issue local queries</string>
    <string name="bt_preferences_location_about_key">locationAboutKey</string>
    <string name="bt_preferences_location_category_key">locationCategoryKey</string>
    <string name="bt_preferences_location_services_key">locationServicesKey</string>
    <string name="bt_preferences_locations_about_title">About location</string>
    <string name="bt_preferences_locations_debug_report_title">Send debug report</string>
    <string name="bt_preferences_locations_section_title">Location settings</string>
    <string name="bt_preferences_locations_services_title">Location services</string>
    <string name="bt_preferences_nl_setting_key">nlSettingKey</string>
    <string name="bt_preferences_notification_category_key">notificationCategoryKey</string>
    <string name="bt_preferences_notification_disable_gmail_key">notificationDisableGmail</string>
    <string name="bt_preferences_notification_disable_gmail_title">Turn off Gmail notifications</string>
    <string name="bt_preferences_notification_enabled_key">notificationEnabledKey</string>
    <string name="bt_preferences_notification_lights_key">notificationLightsKey</string>
    <string name="bt_preferences_notification_lights_title">Pulse notification light</string>
    <string name="bt_preferences_notification_ringtone_key">notificationRingtoneKey</string>
    <string name="bt_preferences_notification_ringtone_title">Sound</string>
    <string name="bt_preferences_notification_settings_title">Notifications</string>
    <string name="bt_preferences_notification_vibrations_key">notificationVibrationsEnabledKey</string>
    <string name="bt_preferences_notification_vibrations_title">Vibrations</string>
    <string name="bt_preferences_notifications_enabled_title">Notifications</string>
    <string name="bt_preferences_nudging_settings_key">nudgingSettingsKey</string>
    <string name="bt_preferences_perfect_snippet_key">perfectSnippetKey</string>
    <string name="bt_preferences_privacy_category_key">privacyCategoryKey</string>
    <string name="bt_preferences_privacy_title">Privacy</string>
    <string name="bt_preferences_profile_capture_enabled_key">profileCaptureEnabledKey</string>
    <string name="bt_preferences_profile_capture_type_key">profileCaptureTypeKey</string>
    <string name="bt_preferences_right_swipe_action_key">rightSwipeActionKey</string>
    <string name="bt_preferences_signature_enabled_key">signatureEnabledKey</string>
    <string name="bt_preferences_signature_enabled_summary">Your signature will be added to your message after you send it.</string>
    <string name="bt_preferences_signature_enabled_title">Signature</string>
    <string name="bt_preferences_signature_settings_key">signatureSettingsKey</string>
    <string name="bt_preferences_signature_settings_title">Signature settings</string>
    <string name="bt_preferences_signature_text_hint">Type your signature</string>
    <string name="bt_preferences_signature_text_key">signatureTextKey</string>
    <string name="bt_preferences_skip_duplicable_url_check_title">Skip duplicate clipboard URL check</string>
    <string name="bt_preferences_skip_duplicate_url_check_key">skipDuplicateUrlCheckKey</string>
    <string name="bt_preferences_slow_animations_key">slowAnimationsKey</string>
    <string name="bt_preferences_slow_animations_title">Slow megalist animations</string>
    <string name="bt_preferences_snippet_title">Snippet</string>
    <string name="bt_preferences_snooze_settings_key">snoozeSettingsKey</string>
    <string name="bt_preferences_snooze_settings_title">Snooze settings</string>
    <string name="bt_preferences_timezone_changed_category_key">timezoneChangedCategoryKey</string>
    <string name="bt_preferences_timezone_changed_category_title">Traveling to a new time zone</string>
    <string name="bt_preferences_timezone_reindex_options_key">timezoneReindexOptionsKey</string>
    <string name="bt_preferences_timezone_reindex_options_title">Update snoozed items</string>
    <string name="bt_preferences_trace_buffer_size_key">networkTraceBufferSizeKey</string>
    <string name="bt_preferences_trace_buffer_size_summary">NOTE: Requires restart to take effect.</string>
    <string name="bt_preferences_trace_buffer_size_title">Network log capture buffer size.</string>
    <string name="bt_preferences_trace_initial_load_enabled_key">traceInitialLoadEnabledKey</string>
    <string name="bt_preferences_trace_initial_load_title">Enable initial load tracing</string>
    <string name="bt_preferences_vacation_responder_settings_key">vacationResponderSettingsKey</string>
    <string name="bt_preferences_work_queue_instrumentation_key">workQueueInstrumentationKey</string>
    <string name="bt_preferences_work_queue_instrumentation_title">Work Queue Instrumentation</string>
    <string name="bt_profile_type_summary">Select profile type (method, network or trace).</string>
    <string name="bt_profile_type_title">Set the type of captured profiles</string>
    <string name="bt_profiling_type_method">METHOD</string>
    <string name="bt_right_swipe_done">swipe_done</string>
    <string name="bt_right_swipe_title">When removing messages, I prefer to…</string>
    <string name="bt_speed_dial_compose">Compose</string>
    <string name="bt_speed_dial_new_task">@string/bt_task</string>
    <string name="preferences_vacation_responder_title">Vacation responder</string>
</resources>