<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/bt_preferences_debug_settings_title" android:key="@string/bt_preferences_debug_settings_key"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:bigtop="http://schemas.android.com/apk/res-auto">
    <com.google.android.apps.bigtop.prefs.BigTopSwitchPreference android:enabled="true" android:title="@string/bt_preferences_fishfood_features_title" android:selectable="true" android:orderingFromXml="true" android:key="@string/bt_preferences_fishfood_features_key" android:shouldDisableView="false" bigtop:defaultProperty="ENABLE_FISHFOOD_FEATURES" />
    <com.google.android.apps.bigtop.prefs.BigTopSwitchPreference android:enabled="true" android:title="@string/bt_preferences_developer_features_title" android:selectable="true" android:orderingFromXml="true" android:key="@string/bt_preferences_developer_features_key" android:shouldDisableView="false" bigtop:defaultProperty="ENABLE_DEVELOPER_FEATURES" />
    <com.google.android.apps.bigtop.prefs.BigTopSwitchPreference android:enabled="true" android:title="@string/bt_preferences_leak_canary_title" android:selectable="true" android:orderingFromXml="true" android:key="@string/bt_preferences_leak_canary_key" android:dependency="@string/bt_preferences_developer_features_key" android:shouldDisableView="true" bigtop:defaultProperty="ENABLE_LEAK_CANARY" />
    <com.google.android.apps.bigtop.prefs.BigTopSwitchPreference android:enabled="true" android:title="@string/bt_preferences_leak_detective_title" android:selectable="true" android:orderingFromXml="true" android:key="@string/bt_preferences_leak_detective_key" android:dependency="@string/bt_preferences_developer_features_key" android:shouldDisableView="true" bigtop:defaultProperty="ENABLE_LEAK_DETECTIVE" />
    <com.google.android.apps.bigtop.prefs.BigTopSwitchPreference android:enabled="true" android:title="@string/bt_preferences_incremental_channel_title" android:selectable="true" android:orderingFromXml="true" android:key="@string/bt_preferences_incremental_channel_key" android:shouldDisableView="false" bigtop:defaultProperty="ENABLE_INCREMENTAL_CHANNEL" />
    <Preference android:enabled="true" android:title="@string/bt_preferences_debug_settings_reset_disable_gmail_notifications_title" android:selectable="true" android:orderingFromXml="true" android:key="@string/bt_preferences_debug_settings_reset_disable_gmail_notifications_key" android:shouldDisableView="false" />
    <com.google.android.apps.bigtop.prefs.BigTopSwitchPreference android:enabled="true" android:title="@string/bt_preferences_skip_duplicable_url_check_title" android:selectable="true" android:orderingFromXml="true" android:key="@string/bt_preferences_skip_duplicate_url_check_key" android:shouldDisableView="false" bigtop:defaultProperty="SKIP_DUPLICATE_URL_CHECK" />
    <com.google.android.apps.bigtop.prefs.BigTopSwitchPreference android:enabled="true" android:title="@string/bt_preferences_slow_animations_title" android:selectable="true" android:orderingFromXml="true" android:key="@string/bt_preferences_slow_animations_key" android:shouldDisableView="false" bigtop:defaultProperty="ENABLE_SLOW_ANIMATIONS" />
    <com.google.android.apps.bigtop.prefs.BigTopSwitchPreference android:enabled="true" android:title="@string/bt_preferences_local_queries_only_title" android:selectable="true" android:orderingFromXml="true" android:key="@string/bt_preferences_local_queries_only_key" android:shouldDisableView="false" bigtop:defaultProperty="ENABLE_LOCAL_QUERIES_ONLY" />
    <com.google.android.apps.bigtop.prefs.BigTopSwitchPreference android:enabled="true" android:title="@string/bt_preferences_trace_initial_load_title" android:selectable="true" android:orderingFromXml="true" android:key="@string/bt_preferences_trace_initial_load_enabled_key" android:shouldDisableView="false" bigtop:defaultProperty="ENABLE_TRACE_INITIAL_LOAD" />
    <com.google.android.apps.bigtop.prefs.BigTopSwitchPreference android:enabled="true" android:title="@string/bt_preferences_live_method_profiling_title" android:selectable="true" android:orderingFromXml="true" android:key="@string/bt_preferences_profile_capture_enabled_key" android:shouldDisableView="false" bigtop:defaultProperty="ENABLE_PROFILE_CAPTURE" />
    <ListPreference android:enabled="true" android:entries="@array/bt_profile_capture_types" android:title="@string/bt_profile_type_title" android:selectable="true" android:orderingFromXml="true" android:key="@string/bt_preferences_profile_capture_type_key" android:summary="@string/bt_profile_type_summary" android:defaultValue="@string/bt_profiling_type_method" android:shouldDisableView="false" android:entryValues="@array/bt_profile_capture_types" />
    <ListPreference android:enabled="true" android:entries="@array/bt_trace_buffer_sizes" android:title="@string/bt_preferences_trace_buffer_size_title" android:selectable="true" android:orderingFromXml="true" android:key="@string/bt_preferences_trace_buffer_size_key" android:summary="@string/bt_preferences_trace_buffer_size_summary" android:defaultValue="TINY" android:shouldDisableView="false" android:entryValues="@array/bt_trace_buffer_sizes" />
    <com.google.android.apps.bigtop.prefs.BigTopSwitchPreference android:enabled="true" android:title="@string/bt_preferences_work_queue_instrumentation_title" android:selectable="true" android:orderingFromXml="true" android:key="@string/bt_preferences_work_queue_instrumentation_key" android:shouldDisableView="false" bigtop:defaultProperty="ENABLE_WORK_QUEUE_INSTRUMENTATION" />
    <com.google.android.apps.bigtop.prefs.BigTopSwitchPreference android:enabled="true" android:title="@string/bt_preferences_frame_rate_metrics_title" android:selectable="true" android:orderingFromXml="true" android:key="@string/bt_preferences_frame_rate_metrics_key" android:shouldDisableView="false" bigtop:defaultProperty="ENABLE_FRAME_RATE_PROFILING" />
    <com.google.android.apps.bigtop.prefs.BigTopSwitchPreference android:enabled="true" android:title="@string/bt_preferences_debug_settings_log_to_filesystem_title" android:selectable="true" android:orderingFromXml="true" android:key="@string/bt_preferences_debug_settings_log_to_filesystem_key" android:summary="@string/bt_preferences_debug_settings_log_to_filesystem_subtitle" android:shouldDisableView="false" bigtop:defaultProperty="LOG_TO_FILESYSTEM" />
    <Preference android:enabled="true" android:title="@string/bt_preferences_debug_settings_export_filesystem_logs_title" android:selectable="true" android:orderingFromXml="true" android:key="@string/bt_preferences_debug_settings_export_log_files_key" android:summary="@string/bt_preferences_debug_settings_export_filesystem_logs_subtitle" android:shouldDisableView="false" />
</PreferenceScreen>