<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/bt_preferences_signature_settings_title" android:key="@string/bt_preferences_signature_settings_key"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference android:persistent="false" android:enabled="false" android:title="@string/bt_preferences_signature_enabled_title" android:selectable="true" android:key="@string/bt_preferences_signature_enabled_key" android:summary="@string/bt_preferences_signature_enabled_summary" />
    <com.google.android.apps.bigtop.prefs.EditTextPreferenceWithSpanned android:persistent="false" android:enabled="false" android:hint="@string/bt_preferences_signature_text_hint" android:singleLine="false" android:selectable="true" android:key="@string/bt_preferences_signature_text_key" android:dependency="@string/bt_preferences_signature_enabled_key" android:inputType="textCapSentences|textMultiLine" />
</PreferenceScreen>