<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/bt_ic_compose_inline_cluster" android:id="@id/compose_menu" android:title="@string/bt_action_compose" android:showAsAction="always">
        <menu>
            <item android:id="@id/compose_email" android:title="@string/bt_speed_dial_compose" />
            <item android:id="@id/add_reminder" android:title="@string/bt_speed_dial_new_task" />
        </menu>
    </item>
    <item android:icon="@drawable/bt_ic_settings_inline_cluster" android:id="@id/nav_settings" android:title="@string/bt_action_cluster_settings" android:showAsAction="always" />
    <item android:icon="@drawable/bt_ic_trash_inline_cluster" android:id="@id/toolbar_trash_sweep" android:title="@string/bt_action_delete_sweep" android:showAsAction="always" />
    <item android:icon="@drawable/bt_ic_archive_inline_cluster" android:id="@id/toolbar_sweep" android:title="@string/bt_action_sweep" android:showAsAction="always" />
    <item android:icon="@drawable/bt_ic_more_vert_inline_cluster" android:id="@id/toolbar_move_to" android:title="@string/bt_action_move_to" android:showAsAction="always" />
</menu>