<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@id/toolbar_pin" android:title="@string/bt_action_pin" android:showAsAction="always" />
    <item android:id="@id/toolbar_snooze" android:title="@string/bt_action_snooze" android:showAsAction="always" />
    <item android:id="@id/toolbar_maur" android:title="" android:showAsAction="always" />
    <item android:id="@id/toolbar_trash" android:title="@string/bt_action_delete" android:showAsAction="always" />
    <item android:id="@id/toolbar_archive" android:title="@string/bt_action_archive" android:showAsAction="always" />
    <item android:icon="@drawable/bt_overflow_menu_item_grey_24dp" android:id="@id/toolbar_move_to" android:title="@string/bt_action_move_to" android:showAsAction="always" />
</menu>