<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/bt_ic_settings_inline_cluster" android:id="@id/nav_settings" android:title="@string/bt_action_cluster_settings" android:showAsAction="always" />
    <item android:icon="@drawable/bt_ic_trash_inline_cluster" android:id="@id/toolbar_trash_sweep" android:title="@string/bt_action_delete_sweep" android:showAsAction="always" />
    <item android:icon="@drawable/bt_ic_archive_inline_cluster" android:id="@id/toolbar_sweep" android:title="@string/bt_action_sweep" android:showAsAction="always" />
    <item android:icon="@drawable/bt_ic_more_vert_inline_cluster" android:id="@id/toolbar_move_to" android:title="@string/bt_action_move_to" android:showAsAction="always" />
</menu>